spring boot actuators intro

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
+		<!-- Spring boot actuators info -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
