--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=mycoolaap
+# Use wildcard(*) to expose all endpoints
+# Can also expose individual endpoints with a comma-delimated list
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=info,health
+management.info.env.enabled=true
+
+info.app.name=My Super Cool App
+info.app.description=A crazy fun app!
+info.app.version=1.0.0 
