--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,16 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
-		<!-- Spring boot actuators info -->
+		<!-- Spring boot actuators -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
+		<!-- Spring boot security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		
 		<dependency>
