--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 # Can also expose individual endpoints with a comma-delimated list
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include=info,health
+
+# Exclude individual endpoints with a comma-delimated list
+# management.endpoints.web.exposure.exclude=info,health
+
 management.info.env.enabled=true
 
 info.app.name=My Super Cool App
