--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ management.info.env.enabled=true
 info.app.name=My Super Cool App
 info.app.description=A crazy fun app!
 info.app.version=1.0.0 
+
+# Customer properties
+
+coach.name=Rahul Mehara
+team.name=Kausoli Tigers 
