--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,15 @@ info.app.name=My Super Cool App
 info.app.description=A crazy fun app!
 info.app.version=1.0.0 
 
-# Customer properties
+# Custom properties
 
 coach.name=Rahul Mehara
 team.name=Kausoli Tigers 
+
+# Changer server port
+
+server.port=8039
+
+# Change deafult context path
+# All the request should get through this point
+server.servlet.context-path=/mycoolapp
